force-app/main/default/objects/PWChrono_Leave_Allocation__c/PWChrono_Leave_Allocation__c.object-meta.xml
<CustomObject>
    <label>PWChrono Leave Allocation</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PWChrono Leave Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>