force-app/main/default/objects/PWChrono_Leave_Allocation__c/fields/Carry_Forwarded_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Carry_Forwarded_Leaves__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Carry Forwarded Leaves</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>