force-app/main/default/objects/PWChrono_Leave_Allocation__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Leave Allocations</relationshipLabel>
    <relationshipName>PWChrono_Leave_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>