force-app/main/default/objects/PWChrono_Leave_Allocation__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Leave Type</label>
    <referenceTo>PWChrono_Leave_Type__c</referenceTo>
    <relationshipLabel>Leave Allocations</relationshipLabel>
    <relationshipName>PWChrono_Leave_Allocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>