force-app/main/default/objects/PWChrono_Leave_Allocation__c/fields/New_Leaves_Allocated__c.field-meta.xml
<CustomField>
    <fullName>New_Leaves_Allocated__c</fullName>
    <formula>Total_Leaves_Allocated__c - Carry_Forwarded_Leaves__c - Total_Leaves_Encashed__c</formula>
    <label>New Leaves Allocated</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>