force-app/main/default/objects/PWChrono_Leave_Allocation__c/fields/Total_Leaves_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_Leaves_Allocated__c</fullName>
    <label>Total Leaves Allocated</label>
    <precision>5</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>