force-app/main/default/objects/PWChrono_Leave_Allocation__c/fields/Total_Leaves_Encashed__c.field-meta.xml
<CustomField>
    <fullName>Total_Leaves_Encashed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Leaves Encashed</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>