force-app/main/default/objects/PWChrono_Leave_Allocation__c/listViews/My_Leave_Balance.listView-meta.xml
<ListView>
    <fullName>My_Leave_Balance</fullName>
    <columns>NAME</columns>
    <columns>Leave_Type__c</columns>
    <columns>New_Leaves_Allocated__c</columns>
    <columns>Carry_Forwarded_Leaves__c</columns>
    <columns>Total_Leaves_Allocated__c</columns>
    <columns>Total_Leaves_Encashed__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Leave Balance</label>
</ListView>